# school-dash

./: .gitignore  Cargo.toml  README.md  lesson_info.json
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: _schools.rs  lib.rs  main.rs
app/src/json_parse/: mod.rs
app/src/schools/: builder.rs  mod.rs  schema.rs
skola24_http/: Cargo.toml
skola24_http/src/: key.rs  lib.rs  prelude.rs  selection.rs  timetable.rs
src/: _schools.rs  lib.rs  main.rs  schools.rs  utils.rs
src/schools/: builder.rs  mod.rs  schema.rs
