[package]
name = "schooldash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
reqwest = {version = "0.11.20", features = ["blocking", "json"]}
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
# sqlx = "0.7.2"
tokio = { version = "1", features = ["full"] }
